--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Mern Demo",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run dev",
+    "start:prod": "node server.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && yarn && yarn run build"
